add_library(${PROJECT_NAME})
add_library(${CMAKE_PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

target_sources(${PROJECT_NAME}
  PUBLIC
    src/session.cpp
    src/webdriver.cpp
  INTERFACE
    FILE_SET HEADERS
      BASE_DIRS include/
      FILES
        include/janucaria/webdriver/session.hpp
        include/janucaria/webdriver/webdriver.hpp
)

target_compile_features(${PROJECT_NAME}
  PUBLIC
    cxx_std_20
)

target_include_directories(${PROJECT_NAME}
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(${PROJECT_NAME}
  PUBLIC
    fmt::fmt
    httplib::httplib
    nlohmann_json::nlohmann_json
)
